{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1369,
  "lineage": "667569b1-d921-2f44-88cd-39b6d06cc76b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:664575080163:subnet/subnet-05a0662fe4fcf2f43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-05a0662fe4fcf2f43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "664575080163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03d00249d0e8caf5b"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:664575080163:subnet/subnet-0dc3ccc21e3a3ef21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0dc3ccc21e3a3ef21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "664575080163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03d00249d0e8caf5b"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:664575080163:subnet/subnet-07f7417f1aa60bb68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-07f7417f1aa60bb68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "664575080163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03d00249d0e8caf5b"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:664575080163:loadbalancer/Jenkins-ELB",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b",
              "eu-west-3c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "Jenkins-ELB-1203804657.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:8080/login",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "Jenkins-ELB",
            "idle_timeout": 80,
            "instances": [
              "i-0fd6787722b3b3acc"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "Jenkins-ELB",
            "security_groups": [
              "sg-063542e10ba5a84e8"
            ],
            "source_security_group": "664575080163/Web Server Security Group",
            "source_security_group_id": "sg-063542e10ba5a84e8",
            "subnets": [
              "subnet-05a0662fe4fcf2f43",
              "subnet-07f7417f1aa60bb68",
              "subnet-0dc3ccc21e3a3ef21"
            ],
            "tags": {
              "Name": "Jenkins-ELB"
            },
            "tags_all": {
              "Name": "Jenkins-ELB"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.web_server_sg",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:664575080163:loadbalancer/WebServer-HA-ELB",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b",
              "eu-west-3c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebServer-HA-ELB-178029249.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "WebServer-HA-ELB",
            "idle_timeout": 30,
            "instances": [
              "i-0019e754f6b7d568d",
              "i-06a930101bd7563c1"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "WebServer-HA-ELB",
            "security_groups": [
              "sg-063542e10ba5a84e8"
            ],
            "source_security_group": "664575080163/Web Server Security Group",
            "source_security_group_id": "sg-063542e10ba5a84e8",
            "subnets": [
              "subnet-05a0662fe4fcf2f43",
              "subnet-07f7417f1aa60bb68",
              "subnet-0dc3ccc21e3a3ef21"
            ],
            "tags": {
              "Name": "WebServer-Highly-Available-ELB"
            },
            "tags_all": {
              "Name": "WebServer-Highly-Available-ELB"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_instance.amazon_server",
            "aws_instance.ubuntu_server",
            "aws_security_group.web_server_sg",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_ami.latest_ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amazon_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca5ef73451e16dc1",
            "arn": "arn:aws:ec2:eu-west-3:664575080163:instance/i-06a930101bd7563c1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a930101bd7563c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ansible-Node-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d26b4d0eb49c437",
            "private_dns": "ip-172-31-40-66.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.66",
            "public_dns": "ec2-35-181-26-158.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.26.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e71b9a7ba1afb661",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Web Server Security Group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f7417f1aa60bb68",
            "tags": {
              "Name": "Amazon test Webserver",
              "Owner": "mirexcool"
            },
            "tags_all": {
              "Name": "Amazon test Webserver",
              "Owner": "mirexcool"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063542e10ba5a84e8"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_sg",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "java_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0559afb177e055245",
            "arn": "arn:aws:ec2:eu-west-3:664575080163:instance/i-0bc50ed772d66b60d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc50ed772d66b60d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "UbuntuJenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc8e3fd722f4a55e",
            "private_dns": "ip-172-31-34-113.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.113",
            "public_dns": "ec2-15-188-119-110.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.119.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f58e9cc9890b07b9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Java Agent Security Group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f7417f1aa60bb68",
            "tags": {
              "Name": "Java Agent Server",
              "Owner": "mirexcool"
            },
            "tags_all": {
              "Name": "Java Agent Server",
              "Owner": "mirexcool"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051f02ef8fa81feae"
            ]
          },
          "dependencies": [
            "aws_security_group.java_agent_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "masterAnsible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca5ef73451e16dc1",
            "arn": "arn:aws:ec2:eu-west-3:664575080163:instance/i-099c8c792ded582cb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099c8c792ded582cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ansible-Master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0adc4f1c0902e094a",
            "private_dns": "ip-172-31-38-31.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.31",
            "public_dns": "ec2-52-47-189-85.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.189.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bff71fbaa59d2df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Ansible Master Security Group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f7417f1aa60bb68",
            "tags": {
              "Name": "Ansible Master Server",
              "Owner": "mirexcool"
            },
            "tags_all": {
              "Name": "Ansible Master Server",
              "Owner": "mirexcool"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed7974f6c110f664"
            ]
          },
          "dependencies": [
            "aws_security_group.ansible_master_sg",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b457b541faec0ca",
            "arn": "arn:aws:ec2:eu-west-3:664575080163:instance/i-0019e754f6b7d568d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0019e754f6b7d568d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ansible-Node-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000a691f622c2b84f",
            "private_dns": "ip-172-31-38-66.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.66",
            "public_dns": "ec2-13-39-109-134.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.109.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016f89c01e3ce5ab1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Web Server Security Group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f7417f1aa60bb68",
            "tags": {
              "Name": "Ubuntu test Webserver",
              "Owner": "mirexcool"
            },
            "tags_all": {
              "Name": "Ubuntu test Webserver",
              "Owner": "mirexcool"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063542e10ba5a84e8"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_sg",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:664575080163:security-group/sg-0ed7974f6c110f664",
            "description": "Default SG for Ansible Master Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed7974f6c110f664",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Ansible Master Security Group",
            "name_prefix": "",
            "owner_id": "664575080163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible Master SG",
              "Owner": "mirexcool"
            },
            "tags_all": {
              "Name": "Ansible Master SG",
              "Owner": "mirexcool"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d00249d0e8caf5b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "java_agent_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:664575080163:security-group/sg-051f02ef8fa81feae",
            "description": "Default SG for Java Agent Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051f02ef8fa81feae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Java Agent Security Group",
            "name_prefix": "",
            "owner_id": "664575080163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Java Agent SG",
              "Owner": "mirexcool"
            },
            "tags_all": {
              "Name": "Java Agent SG",
              "Owner": "mirexcool"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d00249d0e8caf5b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:664575080163:security-group/sg-063542e10ba5a84e8",
            "description": "Default SG for Web Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063542e10ba5a84e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Server Security Group",
            "name_prefix": "",
            "owner_id": "664575080163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG",
              "Owner": "mirexcool"
            },
            "tags_all": {
              "Name": "Web Server SG",
              "Owner": "mirexcool"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d00249d0e8caf5b"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}